--- a/index.html
+++ b/index.html
@@ -1,18 +1,12 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
-
+<head>
+<title>Page Title</title>
+</head>
 <body>
 
-  <p>Before the script...</p>
-
-  <script>
-    console.log("goo")
-  </script>
-  <script src="main.js"></script>
-
-  <p>...After the script.</p>
-  <script src="object.js"></script>
+<h1>My First Heading</h1>
+<p>My first paragraph.</p>
 
 </body>
-
-</html>
+</html> 
